<resources>
    <string name="app_name">Work time Record</string>

    <string name="fragment_setting_title">Setting</string>
    <string name="fragment_about_version">Version %1$s</string>
    <string name="wf_about_app">About App</string>
    <string name="wf_account_info_title">Account Information</string>

    <string name="sw_offer_title">Notice information</string>
    <string name="sw_notice_list_title">Notice list</string>
    <string name="sw_worker_title">Who\'s working</string>
    <string name="sw_notice_detail_title">Notice information</string>

    <string name="fragment_offer_edit_confirm_delete_msg">Are you sure to delete this offer?</string>
    <string name="fragment_offer_edit_offer_type">Offer Type</string>

    <string name="sw_footer_work_time">Check in</string>
    <string name="sw_footer_work_shift">Work shift</string>
    <string name="sw_footer_work_offer">Work offer</string>
    <string name="sw_footer_setting">Setting</string>
    <string name="sw_footer_work_status">Work status</string>

    <!--Check in service-->


    <string name="sw_work_item_project">Project name</string>
    <string name="sw_work_item_project_loc">Location</string>
    <string name="sw_work_item_checkin_list">Check in history</string>

    <string name="sw_work_item_notice_type">Notice type</string>
    <string name="sw_work_item_target_dept">Target department</string>
    <string name="sw_work_item_reason">Reason</string>
    <string name="sw_work_item_notice_loc">Location</string>
    <string name="sw_work_item_notice_pic">Attachment</string>
    <string name="sw_work_item_notice_user">User</string>
    <string name="sw_work_item_notice_date">Notice date</string>
    <string name="sw_work_item_check_user">Checked users</string>

    <string name="sw_work_notice_item_offer_dept">Department</string>

    <string name="sw_work_time_modify_request_title">Modify request</string>
    <string name="sw_work_time_modify_request">Modify request for %1$s check in</string>
    <string name="sw_work_time_modify_request_start">Modify request for %1$s Start time</string>
    <string name="sw_work_time_modify_request_undefined">Modify request for %1$s Undefined</string>
    <string name="sw_work_time_modify_request_end">Modify request for %1$s End time</string>

    <string name="sw_work_time_modify_request_success">Success request</string>

    <string name="sw_shift_work_this_month">This month</string>
    <string name="sw_shift_work_history">Work history</string>
    <string name="sw_shift_work_item_status">Status</string>
    <string name="sw_shift_work_regular_day">Regular days</string>
    <string name="sw_shift_work_working_day">Working days</string>
    <string name="sw_shift_work_paid_vacation">Paid vacation</string>
    <string name="sw_shift_work_special_vacation">Special vacation</string>
    <string name="sw_shift_work_compensatory_holiday">Compensatory holiday</string>
    <string name="sw_shift_work_short_time">Short time</string>
    <string name="sw_shift_work_holiday_working">Holiday working</string>
    <string name="sw_shift_work_be_late">Be late</string>
    <string name="sw_shift_work_leave_early">Leave early</string>
    <string name="sw_shift_work_summary_title">Summary</string>

    <string name="sw_shift_work_item_over_time">Over time</string>

    <string name="sw_work_action_check_in">Check in</string>
    <string name="sw_work_action_choose_loc">Set location</string>

    <string name="sw_msg_no_shift">Shift is not registered</string>

    <!--Notifications-->
    <string name="FM_SW_001">You have new work notice</string>
    <string name="FM_SW_002">You haven\'t check in yet</string>
    <string name="FM_SW_003">You haven\'t check out yet</string>
    <string name="FM_SW_0041">%1$s: limit overtime</string>
    <string name="FM_SW_0042">%1$s users: limit overtime</string>
    <string name="FM_SW_005">Your shift work is updated</string>
    <string name="FM_SW_006_01">Your vacation offer is rejected.</string>
    <string name="FM_SW_006_02">You have new  vacation offer.</string>
    <string name="FM_SW_006_03">Your vacation offer is approved.</string>
    <string name="FM_SW_006_04">Your vacation approve is rejected.</string>
    <string name="FM_SW_007_01">Your overtime offer is rejected.</string>
    <string name="FM_SW_007_02">You have new  overtime offer.</string>
    <string name="FM_SW_007_03">Your overtime offer is approved.</string>
    <string name="FM_SW_007_04">Your overtime approve is rejected.</string>
    <string name="FM_SW_008_01">Your holiday work offer is rejected.</string>
    <string name="FM_SW_008_02">You  have new holiday offer.</string>
    <string name="FM_SW_008_03">Your holiday work offer is approved.</string>
    <string name="FM_SW_008_04">Your holiday work approve is rejected.</string>

    <string name="sw_work_offer_history">My vacation offer</string>

    <!--Work transit service-->
    <string name="sw_work_transit_entry_title">Work transit entry</string>
    <string name="sw_work_transit_leave_item">Leave</string>
    <string name="sw_work_transit_arrive_item">Arrive</string>
    <string name="sw_work_transit_way_type_item">Way type</string>
    <string name="sw_work_transit_trans_type_item">Transit type</string>
    <string name="sw_work_transit_fee_item">Fee</string>
    <string name="sw_work_transit_note_item">Note</string>
    <string name="sw_work_transit_attachment_item">Attachment</string>

    <string name="sw_work_transit_list_title">Transit list</string>
    <string name="fragment_transit_confirm_delete_msg">Are you sure to delete this transit?</string>

    <string name="fragment_offer_detail_comment_hint">Comment</string>
    <string name="fragment_offer_filter_offer_type">Offer type</string>
    <string name="fragment_offer_filter_other_history_filter">Filter: %1$s</string>
    <string name="fragment_offer_filter_offer_status">Offer status</string>
    <string name="fragment_offer_filter_offer_user">User</string>
    <string name="fragment_offer_filter_offer_dept">Department</string>
    <string name="fragment_offer_filter_title">Work offer filter</string>
    <string name="fragment_offer_filter_clear">Clear</string>
    <string name="fragment_offer_filter_update">Update</string>
    <string name="fragment_offer_detail_header">Vacation offer detail</string>
    <string name="fragment_offer_detail_start_date">Expected date</string>
    <string name="fragment_offer_detail_start_time">Offer start time</string>
    <string name="fragment_offer_detail_end_date">Offer end date</string>
    <string name="fragment_offer_detail_end_time">Offer end time</string>
    <string name="fragment_offer_detail_note">Reason</string>
    <string name="fragment_offer_detail_offer_status">Offer status</string>
    <string name="fragment_offer_detail_approve_comment">Approve comment</string>
    <string name="fragment_offer_edit_header">Vacation offer add</string>
    <string name="sw_work_offer_other_history">Other vacation offer</string>
    <string name="fragment_work_offer_edit_offer_type">Offer types</string>
    <string name="fragment_work_offer_edit_offer_status">Offer status</string>
    <string name="fragment_work_offer_edit_offer_dept">Departments</string>

    <string name="sw_work_offer_action_approve">Approve</string>
    <string name="sw_work_offer_action_reject">Reject</string>
    <string name="sw_work_offer_list_filter">Filter: %1$s</string>
    <string name="dlg_checkin_types_title">Change work type</string>
    <string name="txt_dialog_checkin_types_guide">Choose check in type</string>

    <string name="fragment_offer_detail_sick_absent">Sick absent</string>
    <string name="fragment_offer_edit_offer_user">Offer user</string>
    <string name="sw_vacation">Vacation</string>
    <string name="sw_overtime">Overtime</string>
    <string name="sw_holiday_working">Holiday Working</string>
    <string name="sw_time_picker">Time picker</string>
    <string name="sw_overtime_offer">My overtime offer</string>
    <string name="sw_other_overtime_offer">Other overtime offer</string>
    <string name="sw_offer">Offer</string>
    <string name="sw_holiday_working_offer">My holiday working offer</string>
    <string name="sw_other_holiday_working_offer">Other holiday working offer</string>
    <string name="fragment_overtime_detail_header">Overtime offer detail</string>
    <string name="fragment_overtime_detail_expected_date">Expected date</string>
    <string name="fragment_overtime_detail_expected_time">Expected time</string>
    <string name="fragment_overtime_detail_reason">Reason</string>
    <string name="sw_select_dept">Select department</string>
    <string name="sw_select_user">Offer user</string>
    <string name="sw_select_type">Select type</string>
    <string name="sw_search">Search</string>
    <string name="fragment_holiday_working_detail_header">Holiday working offer detail</string>
    <string name="fragment_holiday_working_detail_expected_date">Expected date</string>
    <string name="fragment_overtime_detail_start_time">Start time</string>
    <string name="fragment_overtime_detail_end_time">End time</string>
    <string name="sw_amount">Amount</string>
    <string name="sw_day">%s day</string>
    <string name="sw_yes">Yes</string>
    <string name="sw_no">No</string>
    <string name="sw_filter">Filter</string>
    <string name="rejected">Rejected</string>
    <string name="done">Done</string>
    <string name="wait2">Wait2</string>
    <string name="sw_delete">Delete</string>
    <string name="fragment_holiday_working_edit_header">Holiday working offer add</string>
    <string name="fragment_overtime_edit_header">Overtime offer add</string>
    <string name="sw_early">Early</string>
</resources>
