<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        style="@style/wf_common_match">

        <include layout="@layout/view_common_header" />

        <ScrollView
            style="@style/cs_common_match"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/lnr_id_content"
                style="@style/cs_common_match"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:paddingBottom="@dimen/margin_16dp"
                android:paddingTop="@dimen/margin_16dp"
                android:visibility="invisible">

                <TextView
                    style="@style/wl_common_text"
                    android:layout_marginBottom="@dimen/margin_10dp"
                    android:paddingLeft="@dimen/margin_16dp"
                    android:paddingRight="@dimen/margin_16dp"
                    android:text="@string/fragment_offer_detail_header" />

                <View style="@style/cs_common_divider" />

                <LinearLayout style="@style/wf_common_item_linear2">

                    <TextView
                        style="@style/wl_common_text"
                        android:layout_width="wrap_content"
                        android:text="@string/fragment_offer_edit_offer_user" />

                    <trente.asia.android.view.ChiaseTextView
                        android:id="@+id/txt_fragment_offer_detail_offer_user"
                        style="@style/wl_common_edit_text2"
                        android:layout_marginStart="@dimen/margin_10dp"
                        custom:mName="offerUser" />
                </LinearLayout>

                <View style="@style/cs_common_divider" />

                <LinearLayout style="@style/wf_common_item_linear2">

                    <TextView
                        style="@style/wl_common_text"
                        android:layout_width="wrap_content"
                        android:text="@string/fragment_offer_edit_offer_type" />

                    <trente.asia.android.view.ChiaseTextView
                        android:id="@+id/txt_fragment_offer_detail_offer_type"
                        style="@style/wl_common_edit_text2"
                        android:layout_marginStart="@dimen/margin_10dp"
                        custom:mName="offerType" />
                </LinearLayout>

                <View style="@style/cs_common_divider" />

                <LinearLayout style="@style/wf_common_item_linear2">

                    <TextView
                        style="@style/wl_common_text"
                        android:layout_width="wrap_content"
                        android:text="@string/fragment_offer_detail_start_date" />

                    <trente.asia.android.view.ChiaseTextView
                        android:id="@+id/txt_fragment_offer_detail_start_date"
                        style="@style/wl_common_edit_text2"
                        android:layout_marginStart="@dimen/margin_10dp"
                        custom:mName="startDateString" />
                </LinearLayout>

                <View style="@style/cs_common_divider" />

                <LinearLayout
                    android:id="@+id/lnr_end_date"
                    style="@style/wf_common_item_linear2">

                    <TextView
                        style="@style/wl_common_text"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>

                    <trente.asia.android.view.ChiaseTextView
                        android:id="@+id/txt_end_date"
                        style="@style/wl_common_edit_text2"
                        android:layout_marginStart="@dimen/margin_10dp"
                        custom:mName="startDateString" />
                </LinearLayout>

                <View style="@style/cs_common_divider" />

                <LinearLayout style="@style/wf_common_item_linear2">

                    <TextView
                        style="@style/wl_common_text"
                        android:layout_width="wrap_content"
                        android:text="@string/sw_amount" />

                    <trente.asia.android.view.ChiaseTextView
                        android:id="@+id/txt_amount"
                        style="@style/wl_common_edit_text2"
                        android:layout_marginStart="@dimen/margin_10dp"
                        custom:mName="startDateString" />
                </LinearLayout>

                <View style="@style/cs_common_divider" />

                <LinearLayout
                    android:id="@+id/lnr_sick_absent"
                    style="@style/cs_common_match_wrap"
                    android:orientation="vertical">

                    <LinearLayout style="@style/wf_common_item_linear2">

                        <TextView
                            style="@style/wl_common_text"
                            android:layout_width="wrap_content"
                            android:text="@string/fragment_offer_detail_sick_absent" />

                        <trente.asia.android.view.ChiaseTextView
                            android:id="@+id/txt_sick_absent"
                            style="@style/wl_common_edit_text2"
                            android:layout_marginStart="@dimen/margin_10dp"/>
                    </LinearLayout>


                    <View style="@style/cs_common_divider" />
                </LinearLayout>

                <LinearLayout
                    style="@style/cs_common_match"
                    android:orientation="vertical">

                    <TextView
                        style="@style/wl_common_text"
                        android:layout_width="wrap_content"
                        android:paddingBottom="@dimen/margin_10dp"
                        android:paddingLeft="@dimen/margin_16dp"
                        android:paddingRight="@dimen/margin_16dp"
                        android:paddingTop="@dimen/margin_10dp"
                        android:text="@string/fragment_offer_detail_note" />

                    <View style="@style/cs_common_divider" />

                    <LinearLayout style="@style/wf_common_item_linear2">

                        <trente.asia.android.view.ChiaseTextView
                            android:id="@+id/txt_fragment_offer_detail_note"
                            style="@style/wl_common_text"
                            custom:mName="note" />
                    </LinearLayout>
                </LinearLayout>

                <View style="@style/cs_common_divider" />

                <LinearLayout
                    android:id="@+id/lnr_fragment_offer_detail_approve_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        style="@style/wl_common_text"
                        android:paddingLeft="@dimen/margin_16dp"
                        android:paddingRight="@dimen/margin_16dp"
                        android:text="@string/fragment_offer_detail_offer_status" />

                    <trente.asia.android.view.ChiaseListViewNoScroll
                        android:id="@+id/lst_fragment_offer_detail_offer_status"
                        style="@style/cs_common_match_wrap"
                        android:layout_marginTop="@dimen/margin_10dp"
                        android:divider="@color/cs_common_divider"
                        android:dividerHeight="1px" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnr_id_approve_area"
                    style="@style/cs_common_match_wrap"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <TextView
                        style="@style/wl_common_text"
                        android:text="@string/fragment_offer_detail_approve_comment"
                        android:paddingStart="@dimen/margin_16dp"
                        android:paddingEnd="@dimen/margin_16dp"
                        android:paddingTop="@dimen/margin_10dp"
                        android:paddingBottom="@dimen/margin_10dp"/>
                    <LinearLayout
                        style="@style/wf_common_item_linear2"
                        android:orientation="vertical">
                        <EditText
                            android:id="@+id/edt_fragment_offer_detail_comment"
                            style="@style/wl_common_edit_text_multi_line2"
                            android:layout_marginTop="@dimen/margin_10dp"
                            android:hint="@string/fragment_offer_detail_comment_hint" />

                    </LinearLayout>

                    <View style="@style/cs_common_divider" />

                    <LinearLayout
                        style="@style/cs_common_match_wrap"
                        android:layout_marginTop="@dimen/margin_10dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/margin_16dp"
                        android:paddingRight="@dimen/margin_16dp">

                        <Button
                            android:id="@+id/btn_fragment_offer_detail_reject"
                            style="@style/wl_common_button_small"
                            android:layout_width="@dimen/margin_0dp"
                            android:layout_marginEnd="@dimen/margin_10dp"
                            android:layout_weight="1"
                            android:text="@string/sw_work_offer_action_reject" />

                        <Button
                            android:id="@+id/btn_fragment_offer_detail_approve"
                            style="@style/wl_common_button_small"
                            android:layout_width="@dimen/margin_0dp"
                            android:layout_marginStart="@dimen/margin_10dp"
                            android:layout_weight="1"
                            android:text="@string/sw_work_offer_action_approve" />
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_delete"
                    style="@style/cs_common_button_delete"
                    android:layout_marginLeft="@dimen/margin_26dp"
                    android:layout_marginRight="@dimen/margin_26dp"
                    android:layout_marginTop="@dimen/margin_32dp"
                    android:text="@string/sw_delete"
                    android:background="@color/wf_login_button_color_on"
                    android:visibility="gone" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>